--- a/jquery_faq.html
+++ b/jquery_faq.html
@@ -6,7 +6,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no">
 
-  <title>SANDBOX</title>
+  <title>jquery-faq</title>
 
   <!--  Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -22,47 +22,57 @@
 </head>
 <body>
 
-
-
 <!--Start Container-->
 
-<div id="nationalParks">
-  <h1>US National Parks</h1>
+<div id="page-wrapper">
+  <header class="container justify-center">
+    <div class="row justify-center">
+      <h1>Top 10 US National Parks</h1>
+    </div>
+  </header>
 
-  <dl>
-    <dt>Beast of Bodmin</dt>
-    <dd>A large feline inhabiting Bodmin Moor.</dd>
+  <section class="container">
+    <div class="row">
+      <div class="column">
+        <div class="row justify-center align-center subheader-button-wrapper">
+          <button class="toggleAll toggleAll-color">Toggle For Details</button>
+        </div>
 
-    <dt>Morgawr</dt>
-    <dd>A sea serpent.</dd>
+        <dl>
+          <dt>Yosemite National Park</dt>
+          <dd class="invisible">One of California's most-visited national parks, Yosemite National Park stands out for its bevy of impressive waterfalls, such as Vernal Fall and Bridalveil Fall, as well as unique granite rock formations like Half Dome and El Capitan. There are ample scenic hiking and camping opportunities in Yosemite as well. Whatever your itinerary may be, make sure to stop by the Tunnel View Outlook, which offers a showstopping panoramic view of Yosemite Valley. What's more, the picturesque lookout spot is relatively easy to access. </dd>
 
-    <dt>Owlman</dt>
-    <dd>A giant owl-like creature.</dd>
+          <dt>Yellowstone National Park</dt>
+          <dd class="invisible">Even if Yellowstone didn't hold the incredible distinction of being the world's first national park, the 2.2 million-acre park could easily stand on its own for its unique natural attractions and diverse geography. What's more, this behemoth national park stretches across three states: Wyoming, Montana and Idaho. Here, travelers can get lost in the splendor of Yellowstone's many lakes, mountains, buffalo-filled valleys and, of course, its unmatched geysers and hot springs. To avoid the crowds that often plague the park, plan to visit in April, May, September or October. </dd>
 
-    <dt>Owlman</dt>
-    <dd>A giant owl-like creature.</dd>
+          <dt>Glacier National Park</dt>
+          <dd class="invisible">Water and mountains define this national park, which spans two mountain ranges and includes more than 700 lakes across Montana. Take advantage of the park's expansive hiking trails, and be sure to hit traveler favorites like the Trail of the Cedars and Iceberg Lake Trail. Other activities visitors can enjoy include a ride along scenic Going-to-the-Sun Road and a trip to the unique Waterton-Glacier International Peace Park, a UNESCO World Heritage Site. What's more, Glacier National Park hosts plenty of free ranger-led activities like guided hikes and stargazing events ideal for visitors of all ages.</dd>
 
-    <dt>Owlman</dt>
-    <dd>A giant owl-like creature.</dd>
+          <dt>Grand Canyon National Park</dt>
+          <dd class="invisible">The Grand Canyon is so magnificent that even the highest quality photos don't do the Arizona park's vast beauty justice – you just have to see it in person. The 18-by-277-mile UNESCO World Heritage Site offers endless hiking opportunities with trails of various lengths and degrees of difficulty, as well as the chance to raft the Colorado River. For a slight break from the tourist crowds, head to the less-crowded North Rim. And if you're looking for a different vantage point, consider a helicopter tour to learn more about the Grand Canyon and see it in all its glory from above. </dd>
 
-    <dt>Owlman</dt>
-    <dd>A giant owl-like creature.</dd>
+          <dt>Zion National Park</dt>
+          <dd class="invisible">This Utah national park is a paradise for thrill-seekers. Hike Angels Landing, which brings you up through a nearly 1,500-foot natural staircase, or trek The Narrows, a 10-mile hike through the thinnest section of Zion Canyon, which requires hikers to travel upstream through the Virgin River. For a less strenuous exploration of the park, hop in your car to traverse the nearly 60-mile Zion Canyon Scenic Drive, which takes you past many of the park's most famous landmarks. </dd>
 
-    <dt>Owlman</dt>
-    <dd>A giant owl-like creature.</dd>
+          <dt>Grand Teton National Park</dt>
+          <dd class="invisible">Jackson Hole's backcountry is a wild wonderland begging to be explored. Once home to ranchers and fur trappers, this Wyoming park now offers more than 200 miles of trails that weave past prairies, lakes and the park's most remarkable attribute, the jagged, snow-capped peaks of the Grand Teton mountain range. The Cascade Canyon Trail shows off the best of the park's stunning topography. Don't forget to stop by the Craig Thomas Discovery & Visitor Center to stock up on maps, check out its informational exhibits and watch the interesting documentary film about the park.</dd>
 
-    <dt>Owlman</dt>
-    <dd>A giant owl-like creature.</dd>
+          <dt>Rocky Mountain National Park</dt>
+          <dd class="invisible">The Rockies earn plenty of points for their convenience. Sitting just 70 miles northwest of Denver, the area makes for an easy daytrip. However, you could also spend days exploring this Colorado park. The Rockies' magnificent landscape is one for the books, featuring more than 300 miles of scenic trails, plenty of lakes and numerous mountain peaks taller than 10,000 feet. If you're short on time, Emerald Lake Trail is a popular trek that's less than 5 miles round trip and promises spectacular alpine views.</dd>
 
-    <dt>Owlman</dt>
-    <dd>A giant owl-like creature.</dd>
+          <dt>Bryce Canyon National Park</dt>
+          <dd class="invisible">Hoodoos are odd-shaped pillars of rock left standing from forces of erosion, and Bryce Canyon is home to the most extensive collection of hoodoos in the world. Located in southern Utah, the roughly 35,835-acre park offers an array of hiking opportunities. All trails offer a glimpse of the impressive red rock formations; visitors can also sign up for guided horseback riding tours. While Bryce Canyon is most popular in summer, previous visitors said the park's stark white snow-covered landscape juxtaposed with the orange-red rocks is an unforgettable sight.</dd>
 
-    <dt>Owlman</dt>
-    <dd>A giant owl-like creature.</dd>
-  </dl>
+          <dt>Arches National Park</dt>
+          <dd class="invisible">Established in 1929, Arches National Park covers nearly 77,000 acres in eastern Utah. Oddly shaped sandstone monuments occupy every view, and the formations make the park an excellent place for backpackers, rock climbers and hikers, not to mention photographers. Visitors will find a whopping 2,000-plus arches in the park; the most popular to see are Landscape Arch, Delicate Arch and Double Arch. Plus, travelers will want to check out the visitor center, which features a wealth of information and exhibits outlining the park's history, geology and more. </dd>
 
+          <dt>Great Smoky Mountain National Park</dt>
+          <dd class="invisible">Stretching across 500,000-plus acres in North Carolina and Tennessee, Great Smoky Mountains National Park offers ample opportunities for wildlife-viewing and hiking, including the popular Roaring Fork Motor Nature Trail and Chimney Tops trail. The mountains are also home to more than 1,500 types of plants and flowers, which visitors can see in the spring when the national park hosts a festival of programs and guided hikes to see the blooms. Meanwhile, those interested in a fall visit will be greeted with colorful foliage among the trees that line the hiking trails.</dd>
+        </dl>
+      </div>
+    </div>
+  </section>
 </div>
-
 <!--End Container-->
 
 
