--- a/WeatherMapProject/weather_map.html
+++ b/WeatherMapProject/weather_map.html
@@ -6,7 +6,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no">
 
-  <title>Weather Map</title>
+  <title>Weather App</title>
 
   <!--  Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -19,32 +19,64 @@
   <!-- Mapbox Dependencies -->
   <script src='https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.js'></script>
   <link href='https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.css' rel='stylesheet' />
-  <script src="js/mapbox-geocoder-utils.js"></script>
+  <script src="mapbox-geocoder-utils.js"></script>
+  <script src="../js/keys.js"></script>
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="weather-map.css">
 
+  <!--jQuery Source Code-->
+  <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
+
+
 </head>
 <body>
+
 <!--Start Content-->
-<h1>It's Weather Time</h1>
 
-<!-- The HTML element that serves as the Mapbox container -->
+<!--Holding Place for Weather Cards-->
+<div class="card">
+  <div class="search">
+    <input type="text" class="search-bar">
+    <button>search</button>
 
-<div class="page-wrapper">
-  <div class="container grow">
-    <div class="row grow">
-      <div class="column align-center justify-center">
-        <div id="map" style='width: 800px; height: 600px;'></div>
 
-        <div class="row align-center btn-row">
-          <button id="resetMap">Reset Map</button>
-          <button id="goToFavPlace">Press for my Favorite Places to Eat</button>
-        </div>
-      </div>
-    </div>
+
+
+
   </div>
 </div>
+
+
+
+
+
+
+
+
+<!--&lt;!&ndash; The HTML element that serves as the Mapbox container &ndash;&gt;-->
+<!--<div class = container>-->
+<!--  <div class = row>-->
+<!--    <div class = column>-->
+<!--      <div id="map"></div>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
+
+<!--&lt;!&ndash; The HTML element that serves as the Button container &ndash;&gt;-->
+<!--<div class = container>-->
+<!--  <div class = row>-->
+<!--    <div class = column-3>-->
+<!--      <button id="favPlace">Favorite Places</button>-->
+<!--      <button id="resetMap">Reset Map</button>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
+
+
+
+
+
 
 <!--End Content-->
 
