--- a/mapbox_maps_api.html
+++ b/mapbox_maps_api.html
@@ -20,6 +20,7 @@
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.css' rel='stylesheet' />
     <script src="js/mapbox-geocoder-utils.js"></script>
+    <script src="js/keys.js"></script>
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/mapbox-maps-api.css">
