--- a/practice.html
+++ b/practice.html
@@ -6,7 +6,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no">
 
-    <title>Mapbox Exercise</title>
+    <title>SANDBOX</title>
 
     <!--  Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -16,47 +16,21 @@
 
     <!--  Google Fonts-->
 
-    <!-- Mapbox Dependencies -->
-    <script src='https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.js'></script>
-    <link href='https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.css' rel='stylesheet' />
-    <script src="js/mapbox-geocoder-utils.js"></script>
-
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/mapbox-maps-api.css">
+    <!--  Custom CSS Styles -->
+    <link rel="stylesheet" href="css/sandbox.css">
 
 </head>
 <body>
-
-<!--Start Content-->
-
-<div class = "header">
-    <h1>My First Mapbox Map!</h1>
-</div>
-
-
-<!-- The HTML element that serves as the Mapbox container -->
-<div class = container>
-    <div class = row>
-        <div class = column>
-            <div id="map"></div>
-        </div>
-    </div>
-</div>
-
-<!-- The HTML element that serves as the Button container -->
-<div class = container>
-    <div class = row>
-        <div class = column-3>
-            <button id="favPlace">Favorite Places</button>
-            <button id="resetMap">Reset Map</button>
-        </div>
-        </div>
-    </div>
-</div>
+<!--Start Container-->
 
 
 
-<!--End Content-->
+
+
+
+
+<!--End Container-->
+
 
 <!--jQuery Source Code-->
 <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
@@ -64,9 +38,11 @@
 <!--Bootstrap JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
-<!-- Custom JS -->
-<script src="js/mapbox-geocoder-utils.js"></script>
-<script src="js/mapbox-maps-api.js"></script>
+<!-- Your custom JS goes here -->
+<script src="js/sandbox.js"></script>
+
+
+
 
 </body>
 </html>
