--- a/working.html
+++ b/working.html
@@ -1,106 +1,298 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
-    <!--  Required Meta Tags -->
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no">
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Weather Map EXERCISE</title>
+    <!-- Mapbox JS (got both of these from https://docs.mapbox.com/mapbox-gl-js/guides/install/#quickstart)-->
+    <script src='https://api.mapbox.com/mapbox-gl-js/v2.13.0/mapbox-gl.js'></script>
+    <!-- Mapbox CSS -->
+    <link href='https://api.mapbox.com/mapbox-gl-js/v2.13.0/mapbox-gl.css' rel='stylesheet' />
 
-    <title>My Blog</title>
+    <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
+    <!--  Bootstrap  -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
-    <!--  Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-    <!-- Font Awesome -->
-    <script src="https://kit.fontawesome.com/0bb8b86cc6.js" crossorigin="anonymous"></script>
-
-    <!--  Google Fonts-->
-
-    <!--  Custom CSS Styles -->
-    <!--    <link rel="stylesheet" href="css/ajax-store-style.css">-->
 
     <style>
-        .jumbotron {
-            /*background-image: url('img/blog.jpeg');*/
+        .location{
+            display: flex;
+            justify-content: center;
+            color: white;
+        }
+        .geocoder{
+            display: flex;
+            justify-content: center;
+            width: 100%;
+        }
+        #search-btn{
+            border-radius: 10px;
+            background: black;
+            color: white;
+            margin-left: 10px;
+        }
+        #search-box{
+            width: 50%;
+            height: 40px;
+            background: black;
+            color: white;
+        }
+        .background{
+            background-image: url("img/forecast.jpeg");
             background-repeat: no-repeat;
-            background-size: 100%;
-            overflow:hidden;
+            width: 100%;
+            height: 100%;
+        }
+        .date{
+            display: flex;
+            justify-content: center;
+            background: lightgray;
+            color: black;
+            width: 100%;
+            border-top-left-radius: 10px;
+            border-top-right-radius: 10px;
 
         }
-        .jumboText {
-            background-image: linear-gradient(90deg, blue, blueviolet, lightblue);
-            color:black;
+        .geocoder{
+            padding-left: 10px;
         }
-        .cardText {
-            text-indent: 2em;
+        .navbar{
+            display: flex;
+            padding-left: 10px;
+            padding-right: 10px;
         }
-        .card {
-            margin: 20px;
-            padding: 5px;
+        .HR{
+            background-color: black;
+            height: 2px;
+            width: 95%;
+            padding: 0;
+            margin: 0;
         }
 
-        body {
-            background-image: linear-gradient(230deg, lightblue, lightcyan, darkcyan);
+        #map {
+            display: flex;
+            /* the width and height may be set to any size */
+            width: 100%;
+            height: 700px;
         }
-        .blockquote-footer {
-            color:white;
+
+        #weather{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+
+
+        }
+        .weatherCards{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            border: black solid 2px;
+            border-radius: 10px;
+            width: 220px;
+            color: lightgray;
+            background-color: rgba(100, 100, 100, 0.5); /* set a semi-transparent white background */
+            backdrop-filter: blur(3px); /* apply a blur filter to create the frosted effect */
         }
     </style>
 
 </head>
 <body>
 
-<div class="jumbotron text-center">
-    <h1 class="display-4 jumboText">My Blog</h1>
-    <p class="lead jumboText" id="quote">Welcome to my blog! There are secrets inside the paragraphs.</p>
-    <hr class="my-4">
+
+
+<!--PAGE DISPLAY HERE-->
+
+<!--NAVBAR HERE-->
+<nav class="navbar" style="background-color: whitesmoke;">
+    <h3 style="color: black">Weather App</h3>
+    <p class="current-city" style="color: black"> <span id="current-location"></span></p>
+</nav>
+<div class="background">
+    <br>
+
+    <!--SEARCH BAR/BUTTON HERE-->
+    <div id="geocoder" class="geocoder">
+        <label for="search-box"></label>
+        <input type="text" placeholder="Enter a location" id="search-box">
+        <button id="search-btn" type="submit">Search</button>
+    </div>
+
+    <br>
+
+    <h3 class="location" id="location-head"></h3>
+
+    <!--WEATHER CARDS HERE-->
+    <div id="weather"></div>
+
+    <br>
 </div>
+<!--MAP HERE-->
+<div id='map'></div>
+<script src="js/keys.js"></script>
+<script src="js/mapbox-geocoder-utils.js"></script>
 
 
-<div class="mx-4" id="post"></div>
 
-<button class="btn btn-primary btn-lg" type="button" id="refresh">Refresh</button>
-
-
-<!--jQuery Source Code-->
-<script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
-
-<!--Bootstrap JS-->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
-<!-- Your custom JS goes here -->
-<!--<script src="js/ajax-store.js"></script>-->
-
+<!--JAVASCRIPT HERE-->
 <script>
-    (function () {
-        $.get('data/blog.json').done((data) => {
 
-            console.log(data)
 
-            let markup = ''
-            data.forEach((el) => {
-                markup += `
-            <div class="card text-center mb-4">
-              <div class="card-header">
-                Categories: ${el.categories}
-              </div>
-              <div class="card-body">
-                <h5 class="card-title">${el.title}</h5>
-                <p class="card-text">${el.content}</p>
 
-              </div>
-              <div class="card-footer text-muted">
-                ${el.date}
-              </div>
-            </div>`
-            })
-            $('#posts').html(`${markup}`)
-        })
-    })()
+    //MAPBOX_TOKEN is specified in the keys.js file which is equal to my token
+    // define variables for the map and marker
+    let map;
+    let marker = new mapboxgl.Marker();
+
+    // initialize the map
+
+    mapboxgl.accessToken = MAPBOX_KEY;
+    map = new mapboxgl.Map({
+        container: 'map',
+        style: 'mapbox://styles/mapbox/navigation-night-v1',
+        zoom: 10,
+        center: [-96.80343,  32.77821]
+    });
+
+
+
+
+    // when page loads auto set marker to my home location
+    map.on("load", function (){
+        marker.setLngLat([-96.80343,  32.77821]).addTo(map)
+    });
+
+    // when page loads auto shows the forecast for 5 days at the location
+    $.get("https://api.openweathermap.org/data/2.5/forecast", {
+        APPID: OPEN_WEATHER_APPID,
+        q:     "Haslet, US",
+        units: "imperial"
+    }).done(function(data) {
+        // clear the previous weather data
+        $("#weather").empty();
+
+        // loop over the forecast data and create a card for each day
+        for (let i = 0; i < 40; i += 8) {
+            console.log(data.list[i])
+            $('#weather').append("<div class='weatherCards'><p class='date'>" + data.list[i].dt_txt.substring(0, 10) + "</p>" +
+                "<p>" + data.list[i].main.temp_min + " °F" + " / " + data.list[i].main.temp_max + " °F" + "</p>" +
+                "<img src='http://openweathermap.org/img/w/" + data.list[i].weather[0].icon + ".png'>" +
+                "<hr class='HR'>" +
+                "<p>Description: " + data.list[i].weather[0].description + "</p>" +
+                "<p>Humidity: " + data.list[i].main.humidity + "%" + "<hr class='HR'>" +
+                "<p>Wind: " + data.list[i].wind.speed +  " mph" + "<hr class='HR'>" + "</p>" +
+                "<p>Pressure: " + data.list[i].main.pressure + " Hg" + "</p>")
+        }
+    });
+
+
+
+    // handle the map click event for when click on another location it updates
+    map.on('click', function(click) {
+        // set the marker position to the clicked location
+        marker.setLngLat(click.lngLat).addTo(map);
+
+        // get the weather data for the clicked location
+        $.get("https://api.openweathermap.org/data/2.5/forecast", {
+            APPID: OPEN_WEATHER_APPID,
+            lat: click.lngLat.lat,
+            lon: click.lngLat.lng,
+            units: "imperial"
+        }).done(function(data) {
+            // clear the previous weather data
+            $("#weather").empty();
+
+            // loop over the forecast data and create a card for each day
+            for (let i = 0; i < 40; i += 8) {
+                $('#weather').append("<div class='weatherCards'><p class='date'>" + data.list[i].dt_txt.substring(0, 10) + "</p>" +
+                    "<p>" + data.list[i].main.temp_min + " °F" + " / " + data.list[i].main.temp_max + " °F" + "</p>" +
+                    "<img src='http://openweathermap.org/img/w/" + data.list[i].weather[0].icon + ".png'>" +
+                    "<hr class='HR'>" +
+                    "<p>Description: " + data.list[i].weather[0].description + "</p>" +
+                    "<p>Humidity: " + data.list[i].main.humidity + "%" + "<hr class='HR'>" +
+                    "<p>Wind: " + data.list[i].wind.speed +  " mph" + "<hr class='HR'>" + "</p>" +
+                    "<p>Pressure: " + data.list[i].main.pressure + " Hg" + "</p>")
+            }
+        });
+    });
+
+    // function to have the geocoder update the map when searched location
+    document.getElementById("search-btn").addEventListener("click", geocoder);
+    function geocoder() {
+        let location = document.getElementById('search-box').value;
+
+        // use the Mapbox Geocoding API to get the latitude and longitude of the location
+        $.get("https://api.mapbox.com/geocoding/v5/mapbox.places/" + location + ".json", {
+            access_token: MAPBOX_TOKEN
+        }).done(function(data) {
+            // get the latitude and longitude from the response
+            let lng = data.features[0].center[0];
+            let lat = data.features[0].center[1];
+
+            // set the map center and marker location to the latitude and longitude
+            map.setCenter([lng, lat]);
+            marker.setLngLat([lng, lat]);
+
+
+        });
+    }
+    $("#search-btn").click(function () {
+        alert("Lets see whats happening in your neck of the woods!")
+        let searchQuery = $("#search-box").val();
+        if (searchQuery.length > 0) {
+            // use the mapbox to get the coordinates of the location
+            $.get("https://api.mapbox.com/geocoding/v5/mapbox.places/" + searchQuery + ".json", {
+                access_token: MAPBOX_TOKEN,
+                type: "place",
+                limit: 1
+            }).done(function (data) {
+                // get the coordinates of the location from the Mapbox Geocoding API response
+                let longitude = data.features[0].center[0];
+                let latitude = data.features[0].center[1];
+
+                // set the map center and marker location to the new location
+                map.setCenter([longitude, latitude]);
+                marker.setLngLat([longitude, latitude]).addTo(map);
+
+
+
+
+
+
+
+                // use the OpenWeather API to get the forecast for the new location
+                $.get("https://api.openweathermap.org/data/2.5/forecast", {
+                    APPID: OPEN_WEATHER_APPID,
+                    lat: latitude,
+                    lon: longitude,
+                    units: "imperial"
+                }).done(function (data) {
+                    // clear the previous weather data
+                    $("#weather").empty();
+
+                    // loop over the forecast data and create a card for each day
+                    for (let i = 0; i < 40; i += 8) {
+                        $('#weather').append("<div class='weatherCards'><p class='date'>" + data.list[i].dt_txt.substring(0, 10) + "</p>" +
+                            "<p>" + data.list[i].main.temp_min + " °F" + " / " + data.list[i].main.temp_max + " °F" + "</p>" +
+                            "<img src='http://openweathermap.org/img/w/" + data.list[i].weather[0].icon + ".png'>" +
+                            "<hr class='HR'>" +
+                            "<p>Description: " + data.list[i].weather[0].description + "</p>" +
+                            "<p>Humidity: " + data.list[i].main.humidity + "%" + "<hr class='HR'>" +
+                            "<p>Wind: " + data.list[i].wind.speed +  " mph" + "<hr class='HR'>" + "</p>" +
+                            "<p>Pressure: " + data.list[i].main.pressure + " Hg" + "</p>")
+                    }
+
+                });
+
+            });
+        }
+    });
 
 
 </script>
-
-
+<script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
